fix assign button on mobile by removing extra buttons from DOM based on screen size

--- a/sass/views/_item.scss
+++ b/sass/views/_item.scss
@@ -113,9 +113,6 @@
 				flex-direction: column;
 				position: relative;
 			}
-			.actions {
-				display: none;
-			}
 			md-fab-speed-dial {
 				position: absolute;
 				top: 100%;
